@@ -25,7 +25,7 @@
       <BuildNr Value="23"/>
       <StringTable Comments="Compiled with Lazarus 1.8.2 / FPC 3.0.4" CompanyName="uib gmbh (uib.de / opsi.org)" FileDescription="opsi-script" InternalName="winst64.exe" LegalCopyright="AGPL v3" LegalTrademarks="opsi / opsi.org / open pc server integration" OriginalFilename="winst64.exe" ProductName="opsi-script" ProductVersion="4.1.0.0"/>
     </VersionInfo>
-    <BuildModes Count="4" Active="Debug">
+    <BuildModes Count="4" Active="Release">
       <Item1 Name="default" Default="True"/>
       <Item2 Name="Debug">
         <CompilerOptions>
@@ -462,8 +462,9 @@
       </Unit27>
       <Unit28>
         <Filename Value="changelog.txt"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <CursorPos X="13" Y="13"/>
+        <CursorPos Y="12"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -868,10 +869,9 @@
       <Unit76>
         <Filename Value="osregistry.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="11"/>
         <TopLine Value="96"/>
-        <CursorPos X="49" Y="112"/>
+        <CursorPos X="22" Y="103"/>
         <UsageCount Value="91"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -934,7 +934,7 @@
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit82>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="osparser.pas"/>
         <Caret Line="10083" Column="62" TopLine="10069"/>
@@ -1005,56 +1005,52 @@
       </Position17>
       <Position18>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2429" Column="24" TopLine="2927"/>
+        <Caret Line="1908" Column="20" TopLine="1889"/>
       </Position18>
       <Position19>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1908" Column="20" TopLine="1889"/>
+        <Caret Line="1930" Column="22" TopLine="1911"/>
       </Position19>
       <Position20>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1930" Column="22" TopLine="1911"/>
+        <Caret Line="2000" Column="20" TopLine="1981"/>
       </Position20>
       <Position21>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2000" Column="20" TopLine="1981"/>
+        <Caret Line="1889" Column="56" TopLine="1875"/>
       </Position21>
       <Position22>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1889" Column="56" TopLine="1875"/>
-      </Position22>
-      <Position23>
         <Filename Value="..\external_libraries\indy\Lib\Protocols\IdHTTP.pas"/>
         <Caret Line="1808" Column="12" TopLine="1796"/>
+      </Position22>
+      <Position23>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1859" Column="19" TopLine="1848"/>
       </Position23>
       <Position24>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1859" Column="19" TopLine="1848"/>
+        <Caret Line="1856" Column="53" TopLine="1848"/>
       </Position24>
       <Position25>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1856" Column="53" TopLine="1848"/>
-      </Position25>
-      <Position26>
         <Filename Value="..\common\oswebservice.pas"/>
         <Caret Line="2835" TopLine="2815"/>
+      </Position25>
+      <Position26>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="1039" Column="55" TopLine="1009"/>
       </Position26>
       <Position27>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="1039" Column="55" TopLine="1009"/>
+        <Caret Line="1029" TopLine="1010"/>
       </Position27>
       <Position28>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="1029" TopLine="1010"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="560" Column="43" TopLine="550"/>
       </Position28>
       <Position29>
         <Filename Value="osmain.pas"/>
-        <Caret Line="560" Column="43" TopLine="550"/>
-      </Position29>
-      <Position30>
-        <Filename Value="osmain.pas"/>
         <Caret Line="1867" TopLine="1848"/>
-      </Position30>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
