@@ -4,6 +4,12 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.0.24) stable; urgency=low
+
+  * osconf: readConfigFromService: more debug and try-except
+
+-- Detlef Oertel <d.oertel@uib.de>  Mon, 16 Jul 2018:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.0.23) stable; urgency=low
 
   * switch High DPI support off for Win7 (did not work correctly)
